Improving the test classes architecture.